add eclipse code formatter plugin